[package]
name = "konko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
#nix = "0.22.1"
nix = { version = "0.27.1", features = ["sched", "signal", "socket", "zerocopy", "user"]}
scan_fmt = "0.2.6"
structopt = "0.3.26"
